hw3 align fix

--- a/03_Homework 3/CSS/Style.css
+++ b/03_Homework 3/CSS/Style.css
@@ -4,15 +4,13 @@
 
 body {
   background-color: #f9f9f9;
-  width: 1366px;
 }
 
 #wrapper {
   width: 1060px;
-  height: auto;
   background-color: #ffffff;
-  margin-left: 150px;
-  margin-right: 150px;
+  margin-left: auto;;
+  margin-right: auto;;
   padding-top: 50px;
   padding-bottom: 60px;
   -webkit-box-shadow: 0px 2px 3px 2px rgba(0,0,0,0.56);
